@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/ZendFramework
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.62 2010/02/03 01:41:28 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.63 2010/02/12 00:05:32 yngwin Exp $
+
+*ZendFramework-1.10.1 (12 Feb 2010)
+
+  12 Feb 2010; Ben de Groot <yngwin@gentoo.org>
+  +ZendFramework-1.10.1.ebuild:
+  Version bump
 
 *ZendFramework-1.10.0 (03 Feb 2010)
 
